# wundernut-vol12

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  main.py  pyproject.toml
src/: crypto_utils.py  img_utils.py  ocr.py  segmenting.py  solution.py
